# salix

./: .gitignore  Cargo.toml  LICENSE  README.md  generate_cert.sh
.github/workflows/: docs.yml  rust.yml
client/: Cargo.toml  build.rs
client-gui/: Cargo.toml  build.rs
client-gui/src/: chat_window.rs  config.rs  entry_window.rs  error_window.rs  license_window.rs  main.rs  ui.rs
client-gui/ui/: global_data.slint  main.slint  palette.slint  widgets.slint  windows.slint
client-gui/ui/widgets/: animation.slint  footer.slint  loading-animation.slint
client-gui/ui/windows/: chat.slint  entry.slint  error.slint  license.slint  loading.slint
client-gui/ui/windows/chat/: chat-input.slint  chat-message.slint
client-gui/ui/windows/entry/: register2-panel.slint
client/src/: auth.rs  auth_token_store.rs  config.rs  config_manager.rs  crate_version.rs  lib.rs  main.rs  protocol_util.rs  ui.rs
client/src/logic/: auth.rs
client/ui/: entry.slint  palette.slint  widgets.slint
client/ui/widgets/: _animation.slint  button.slint  lineedit-base.slint  lineedit.slint  scrollview.slint  text.slint  textedit.slint
client/ui/windows/: chat.slint  entry.slint
client/ui/windows/chat/: chat-input.slint
client/ui/windows/entry/: login-panel.slint  panel-view.slint  register1-panel.slint  register3-panel.slint
protocol/: Cargo.toml  build.rs
protocol/capnp/: main.capnp
protocol/proto/: auth.proto  main.proto
protocol/src/: auth.rs  c2s.rs  enum_macro.rs  lib.rs  macro.rs  message.rs  s2c.rs
protocol/src/auth/: v1.rs
server/: Cargo.toml  salix.toml
server/.sqlx/: query-0117358a24eb5ae1ab2fd5c57da2c500e53760947a633125b4f0129caa77db8a.json  query-096b85b10214e9f480eb4ebf8d16cc7d59d9d66da3ec1b8e86fac51daa8e2518.json  query-25489cd9423ac6d5a7ca6d933d3f03ab55443a8c61424e14e4a10ab35eac3d9d.json  query-273bb9263c065c865314965305cabe80b60865f833355904f80ee08c65056a55.json  query-33dd25c11b77c862c5de2aac45e7aca5cdf2e925394a29c17adcbfb7558a2a73.json  query-35af6ae0925d2724f14b0fb376a486dda05f8694dd7dca025000cde36ccc9e20.json  query-360db71766682c3b819b65b20cda885a5fae41d9d7992323843dec19778fab9a.json  query-38516ca9e82506259fce087cc9ea716af9881ac41ba21d4edb9b58a3af15d316.json  query-3bdf96de3cc413de94d6bec3fc7b365b90530159e6b911f8d8b73cd511d5db84.json  query-4a8885e6439f482a8556cd049aaff93606685a4d1d8bac980815fdeff392f51c.json  query-4b51701bf29f7138571757026623ee8174b7e708cca647232e915450ee5fcf90.json  query-4dd8b173457fddee436663e97b8b1b82e8c2c3bb6c6094e5dd82f5bdbf15b29a.json  query-501a4edf07bbd5901b2fb3522d01047b8c4c57aa06b06887708e4875b9c157f2.json  query-5114d05c59fc3f2ac25cc8259b2b4b6b0d664792afe0ae5ae22bdb134e7aa0f0.json  query-54b3896c569027c4b7cd3d2c13f8de5af548cb34964f13c2d75051979ef11b75.json  query-613027d6b19bd5faece7d2eeaad9bd5079556c1b2412f2121e2bcc5291dea59f.json  query-6275f783a41007008ae2a6c5b0b3ad2037d2c17bc39339b25f2a98d492883ca4.json  query-64931712c0890426254d8a8ee29122775cc5cce01e68cec0a71c2c0d78a270d9.json  query-6776dc50f184188756ad7fe263b0304333536768527525a43bdd45aedffa3c4f.json  query-6bbe915a16bc01b8ccc46a622fc81fa7914661c19baf7236b1ac695ad2f758c5.json  query-75bbc7d8aca1ce0efc61c09a0b46477d733adf13fefbdff4f8108b8399cb5b41.json  query-7792950a19e52503fa94f673db9c6ff219634197cc112de9838b1a168e0589c9.json  query-779e85bd7c5765a685eeaf631b907cb1752377f6463ae16d43329e351b31dd1c.json  query-8e328037f46d9ea5d785cd28560efed9f44ee9ef1a60e6c5ffbdffe0c360f848.json  query-9860f4326bb71e48e77e37e32a5d6f3855ea97f4612deb67b1591f8852dc896e.json  query-9bc04ccbf330f09b448ee3e4a337732caeca363af10d43ee41a41f8037425fa4.json  query-a521da073ea43fa64a3b62eb1d3bbc48a1e753594f8917c7da59833a6d6719a9.json  query-a980e9ae8d72a9a206f4bbd01e6ad7c7452bca12d29b840a7de93a90e3051bcd.json  query-abd28fc9b9da0c2ac259ee50699660e01e4691c156d46232d7d61e7dbc4dc019.json  query-b0479183d58d79e9a13ff2018e02f37696bda7d83020cbfc5c812ebff79d0334.json  query-b2af388ca9c39d4995d89eb1ba7b111ab4728e4184a2de8dba6a204b44897b03.json  query-b382cb5f9a8fef1af6954e8bd5d7901c388ca0b2da4e18fe16b7bec8420ca1d8.json  query-b3de938995c744adfb9171880990e92f295faf8618cf0f5650d91c9067be6821.json  query-b9ad307852fee34f401aaf836963c53049bc042d71c0ba5aab0eb00f69dbcd7f.json  query-bb54d3c542401cce30a76f7f505642c1119f2c2e1485e0fbc39c91b0d7fd4c9b.json  query-bf1e358ef90680e7eca2281da54e57c2f89490e13ab40ecc64a96c49c3bebe80.json  query-c1f689d315a4a6b394b454dca62640469b825ba1cf1a88461e7cedc7f17742ee.json  query-c3568c97340480b5ffca6906d7eeb89c7ff1a76e6ee3e6271a051c19fee80e22.json  query-c8a72e9b33ae5c82fb171a43ac46a6cce1ec02991184ea3310dc27b8aa09cba5.json  query-c98dedc510834da89358251a8197b83abf0f49f52bf1a862286439ee028df6e6.json  (+8 more)
server/examples/: preview_pages.rs
server/migrations/: 20250809152927_initial.sql
server/src/: auth.rs  auth_verify.rs  cmd_args.rs  config.rs  database.rs  db.rs  db_cleaner.rs  email.rs  lib.rs  logging.rs  main.rs  pages.rs  populate.rs  protocol_util.rs  socket.rs  templates.rs  update_listener.rs  version_check.rs
server/src/auth/: v1.rs
server/src/database/: active_sessions.rs  email_verifications.rs  message.rs  registrations.rs  user.rs
server/src/db/: active_sessions.rs  message.rs  user.rs
server/src/endpoints/: main.rs
server/src/endpoints/auth/: v1.rs
server/src/pages/: email.rs  email_verification.rs
server/src/pages/email/: account_reminder.rs  verification_code.rs
server/src/templates/: email_verification.rs
server/src/update_listener/: messages.rs  pubsub.rs  worker.rs
server/src/update_listener/pubsub/: control.rs  subscriber.rs
server/templates/: base.html  email_verification_code.html  email_verification_code_invalid.html  internal_error.html
server/templates/email/: account_reminder.html  verification_code.html
server/tests/: msg_listener_seq_id_race_condition.rs
server/tests/common/: mod.rs
tokio-pubsub/: Cargo.toml
tokio-pubsub/src/: control.rs  error.rs  funnel_task.rs  lib.rs  options.rs  publisher.rs  publisher_handle.rs  subscriber.rs  traits.rs
tokio-pubsub/src/publisher/: drive.rs
tokio-pubsub/tests/: simple.rs
