[workspace]
resolver = "3"
members = ["client", "protocol", "server", "tokio-pubsub"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = "1.0.219"
bitcode = "0.6.6"
tokio = "1.47.1"
thiserror = "2.0.14"
futures = "0.3.31"
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = "0.8.4"
# sqlx = "0.8.6"
sqlx = { git = "https://github.com/PonasKovas/sqlx.git", branch = "debug" }
uuid = "1.17.0"
tokio-tungstenite = "0.27.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.9.5"
clap = "4.5.44"
argon2 = "0.5.3"
chrono = "0.4.41"
serde_json = "1.0.142"
ahash = "0.8.12"
reqwest = "0.12.23"
slint = { version = "1.13.1", default-features = false, features = ["compat-1-2", "renderer-skia", "backend-winit"] }
slint-build = "1.13.1"

# questionable purpose:
tower = "0.5.2" # hmm?
