[workspace]
resolver = "3"
members = ["client", "client-gui", "protocol", "server", "tokio-pubsub"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = "1.0.219"
bitcode = "0.6.6"
tokio = "1.47.1"
thiserror = "2.0.14"
futures = "0.3.31"
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = "0.8.4"
# sqlx = "0.8.6"
sqlx = { git = "https://github.com/PonasKovas/sqlx.git", branch = "debug" }
uuid = "1.17.0"
tokio-tungstenite = "0.27.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.9.5"
clap = "4.5.44"
argon2 = "0.5.3"
chrono = "0.4.41"
serde_json = "1.0.142"
ahash = "0.8.12"
reqwest = "0.12.23"
slint = { version = "1.13.1", default-features = false, features = ["compat-1-2", "renderer-skia", "backend-winit"] }
slint-build = "1.13.1"
async-compat = "0.2.5"
email_address = "0.2.9"
lettre = { version = "0.11.18", default-features = false }
url = "2.5.7"
urlencoding = "2.1.3"
rand = "0.9.2"
sha2 = "0.10.9"
base64 = "0.22.1"
askama = "0.14.0"
css-inline = "0.17.0"
# very very questionable dependency, slop confirmed
# https://github.com/open-source-cooperative/keyring-rs/issues/273
keyring = "3.6.3"
directories = "6.0.0"
