[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
protocol = { path = "../protocol" }
tokio-tungstenite.workspace = true
tokio = { workspace = true, features = ["fs"] }
futures.workspace = true
uuid.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots", "json"] }
async-compat.workspace = true
email_address.workspace = true
keyring = { workspace = true, features = ["linux-native-sync-persistent", "windows-native", "apple-native", "crypto-rust"] }
directories.workspace = true
toml = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }
