[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
protocol = { path = "../protocol" }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures.workspace = true
anyhow.workspace = true
tower.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { workspace = true, features = ["v7", "fast-rng"] }
axum = { workspace = true, features = ["ws"] }
toml = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive", "unicode", "wrap_help"] }
argon2 = { workspace = true, features = ["std"] }
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde_json.workspace = true
ahash.workspace = true
