[package]
name = "server"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"

[dependencies]
protocol = { path = "../protocol" }
tokio-pubsub = { path = "../tokio-pubsub" }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures.workspace = true
anyhow.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { workspace = true, features = ["v7", "fast-rng"] }
axum = { workspace = true, features = ["ws", "macros"] }
toml = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive", "unicode", "wrap_help"] }
argon2 = { workspace = true, features = ["std"] }
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde_json.workspace = true
ahash.workspace = true
email_address.workspace = true
lettre = { workspace = true, features = ["builder", "smtp-transport", "pool", "tokio1-rustls", "ring", "rustls-platform-verifier", "tokio1", "tracing"] }
url = { workspace = true, features = ["serde"] }
urlencoding.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
askama.workspace = true
css-inline.workspace = true

[dev-dependencies]
reqwest.workspace = true # for controlling toxiproxy
